# query-planner-service-comparison

./: .gitignore  README.md  bun.lockb  package.json
apollo/: .rustfmt.toml  Cargo.toml
bun/: server.ts
deno/: server.ts
node/: server.ts
requests/: bun.http  deno.http  node.http  rust.http
rust/: Cargo.toml
rust/src/: main.rs
rust/supergraph/: schema.graphql
shared/: query-planner-service.ts
