[package]
name = "query-planner-service-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["load-shed", "timeout", "limit"] }
apollo-federation = "2.0.0-preview.0"
apollo-compiler = "1.0.0-beta.24"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
