[package]
name = "query-planner-service-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["load-shed", "timeout", "limit"] }
apollo-federation = "2.6.0"
apollo-compiler = "1.28.0"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
